small style refactoring

--- a/src/renderer/app/loading/loading.scss
+++ b/src/renderer/app/loading/loading.scss
@@ -1,19 +1,23 @@
-.Loading-ring {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
+.Loading {
+  &-ring {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+
+    &:after {
+      content: " ";
+      display: block;
+      width: 46px;
+      height: 46px;
+      margin: 1px;
+      border-radius: 50%;
+      border: 5px solid #373737;
+      border-color: #373737 transparent #373737 transparent;
+      animation: loadingRotate 1.2s linear infinite;
+    }
+  }
 }
-.Loading-ring:after {
-  content: " ";
-  display: block;
-  width: 46px;
-  height: 46px;
-  margin: 1px;
-  border-radius: 50%;
-  border: 5px solid #373737;
-  border-color: #373737 transparent #373737 transparent;
-  animation: loadingRotate 1.2s linear infinite;
-}
+
 @keyframes loadingRotate {
   0% {
     transform: rotate(0deg);
