--- a/src/renderer/app/quote/quote.scss
+++ b/src/renderer/app/quote/quote.scss
@@ -3,38 +3,40 @@ img {
   height: 100px;
 }
 
-.Quote-logo {
-  width: 100px;
-  height: 100px;
-}
+.Quote {
+  &-logo {
+    width: 100px;
+    height: 100px;
+  }
 
-.Quote-logoContainerEnd {
-  display: flex;
-}
+  &-logoContainerEnd {
+    display: flex;
 
-.Quote-logoContainerEnd img {
-  margin: 0 0 0 auto;
-  transform: rotate(180deg);
-}
+    img {
+      margin: 0 0 0 auto;
+      transform: rotate(180deg);
+    }
+  }
 
-.Quote-title {
-  font-family: "OpenSans-semibold", serif;
-  font-size: 40px;
-  margin: 0 0 0 auto;
-}
+  &-logoTopContainer {
+    display: flex;
+    align-items: center;
+  }
 
-.Quote-logoTopContainer {
-  display: flex;
-  align-items: center;
-}
+  &-title {
+    font-family: "OpenSans-semibold", serif;
+    font-size: 40px;
+    margin: 0 0 0 auto;
+  }
 
-.Quote-text {
-  white-space: pre-wrap;
-  font-family: "OpenSans-lightitalic", serif;
-  font-size: 20px;
-}
+  &-text {
+    white-space: pre-wrap;
+    font-family: "OpenSans-lightitalic", serif;
+    font-size: 20px;
+  }
 
-.Quote-info {
-  font-family: "OpenSans-lightitalic", serif;
-  font-size: 18px;
+  &-info {
+    font-family: "OpenSans-lightitalic", serif;
+    font-size: 18px;
+  }
 }
