--- a/src/renderer/app/button/button.scss
+++ b/src/renderer/app/button/button.scss
@@ -1,10 +1,12 @@
+@import '../../styles/_fonts.scss';
+
 .Button {
   &-button {
     padding: 10px;
     color: aliceblue;
     background-color: var(--button-color, #343434);
     border-radius: var(--button-border-radius);
-    font-family: "OpenSans-semibold", serif;
+    font-family: $font-family-opensans-semibold;
     font-size: 13px;
 
     &:hover {
