--- a/src/renderer/app/quoteList/quoteList.scss
+++ b/src/renderer/app/quoteList/quoteList.scss
@@ -47,8 +47,8 @@
     flex: 0.5 0 0;
   }
 
-  &-delete {
-    width: 30px;
-    height: 30px;
+  &-edit {
+    width: 20px;
+    height: 20px;
   }
 }
