--- a/src/renderer/app/quote/quote.scss
+++ b/src/renderer/app/quote/quote.scss
@@ -23,7 +23,7 @@
   &-title {
     font-family: $font-family-opensans-semibold;
     font-size: 40px;
-    margin: 0 0 0 auto;
+    margin-left: 20px;
   }
 
   &-text {
