set startup configurable

--- a/src/renderer/app/settings/settings.scss
+++ b/src/renderer/app/settings/settings.scss
@@ -8,4 +8,9 @@
     font-family: $font-family-opensans-light;
     font-size: 20px;
   }
+
+  &-labelStartUp {
+    display: block;
+    margin-top: 20px;
+  }
 }
